# ppcheck

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml  release.yml
ppcheck/: __init__.py  api.py  cli.py  constants.py  encryption.py  engine.py  extractor.py  install.py  models.py  settings.py  utils.py
pwned_password_checker/: __init__.py  api.py  cli.py  constants.py  extractor.py  install.py  loader.py  models.py  utils.py
tests/: conftest.py  test_api.py  test_dummy.py  test_extractor.py  test_install.py  test_loader.py  test_models.py
tests/resources/: passwords.csv
