[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
include = ["ppcheck"]

[project]
name = "ppcheck"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=46.0.3",
    "pandas==2.3.*",
    "pydantic-settings>=2.13.1",
    "requests==2.31.*",
    "sqlalchemy==2.0.*",
]

[project.scripts]
ppcheck = "ppcheck.cli:main"

[project.urls]
Homepage = "https://github.com/cburik/ppcheck"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "isort>=7.0.0",
    "mock>=5.2",
    "mypy>=1.18",
    "pre-commit>=4.0",
    "pytest>=8.4.2",
    "python-semantic-release>=10.5.3",
    "ruff>=0.14.4",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.alpha]
match = "alpha"
prerelease = true
prerelease_token = "alpha"

[tool.ruff]
line-length = 120
